improvement(index, mobile, cove-manila, footer): needed adjustments for mobile

--- a/index.html
+++ b/index.html
@@ -319,10 +319,38 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="row cove-manila-row-2-sub-1">
-          <div class="col-12 col-12 col-sm-12 col-md-12 col-lg-12">
-            PRE-FOOTER
+      <div class="col-12 pre-footer-wrapper">
+        <div class="row cove-manila-row-2-sub-1 pre-footer-row justify-content-center">
+          <div class="col-12 pre-footer-col text-center">
+            <p class="nye-gold-rush"><strong>NEW YEAR'S EVE GOLD RUSH</strong></p>
+            <p class="nye-gold-rush-sub">LET'S PAINT IT ALL GOLD.</p>
+
+            <div class="row justify-content-center">
+              <div class="col-12 text-center social-icons-wrapper">
+                <ul class="social-icons">
+                  <li class="social-icon hvr-grow">
+                    <a class="social-icon-link fb-icon" href="#">
+                      <i class="fa fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li class="social-icon hvr-grow">
+                    <a class="social-icon-link ig-icon" href="#">
+                      <i class="fa fa-instagram"></i>
+                    </a>
+                  </li>
+                  <li class="social-icon hvr-grow">
+                    <a class="social-icon-link in-icon" href="#">
+                      <i class="fa fa-linkedin"></i>
+                    </a>
+                  </li>
+                  <li class="social-icon hvr-grow">
+                    <a class="social-icon-link yt-icon" href="#">
+                      <i class="fa fa-youtube-play"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -333,11 +361,11 @@
     <div class="container-fluid">
       <div class="row footer-row">
         <div class="col-12 text-center text-white">
-          <p class="footer-address">
+          <p class="footer-text footer-address">
             New Seaside Drive, Entertainment City, Parañaque City, 1701,<br />
             Metro Manila, Philippines
           </p>
-          <p class="footer-okada">
+          <p class="footer-text footer-okada">
             Copyright © 2019 Okada Manila. All Rights Reserved.
           </p>
         </div>
