improvement(responsive, desktop-view): initial adjustments for desktop view
NOTE: Not yet tested on tablets

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
     </div>
   </nav>
   <div id="top" class="container-fluid main-container">
-    <div class="row hero-row">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-0">
+    <div class="row hero-row justify-content-lg-center">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-10 p-0">
         <div class="grid">
           <div class="image-2020 wow animated fadeIn delay-1s"></div>
           <div class="image-hero-model wow animated fadeIn"></div>
         </div>
       </div>
     </div>
-    <div class="row countdown-row">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="row countdown-row justify-content-center">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-5">
         <div id="countdown" class="countdown-container">
           <div class="number-of days wow fadeInDown animated" data-wow-delay="0.2s">00</div>
           <div class="number-of hours wow fadeInDown animated" data-wow-delay="0.4s">00</div>
@@ -100,85 +100,89 @@
         <img class="image the-company-group" src="images/the-company-group@2x.png" />
       </div>
     </div>
-    <div id="guests" class="row guests-row justify-content-between align-content-around">
-      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-        <div class="guest-info-container hvr-float-shadow">
-          <div class="guest-image bugoy-drilon"></div>
-          <div class="guest-info">
-            <h6 class="guest-name">Bugoy Drilon</h6>
-            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+    <div id="guests" class="row guests-row justify-content-between justify-content-md-center align-content-around">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-8">
+        <div class="row">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+            <div class="guest-info-container hvr-float-shadow">
+              <div class="guest-image bugoy-drilon"></div>
+              <div class="guest-info">
+                <h6 class="guest-name">Bugoy Drilon</h6>
+                <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-        <div class="guest-info-container hvr-float-shadow">
-          <div class="guest-image daryl-ong"></div>
-          <div class="guest-info">
-            <h6 class="guest-name">Daryl Ong</h6>
-            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+            <div class="guest-info-container hvr-float-shadow">
+              <div class="guest-image daryl-ong"></div>
+              <div class="guest-info">
+                <h6 class="guest-name">Daryl Ong</h6>
+                <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-        <div class="guest-info-container hvr-float-shadow">
-          <div class="guest-image michael-pangilinan"></div>
-          <div class="guest-info">
-            <h6 class="guest-name">Michael Pangilinan</h6>
-            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3">
+            <div class="guest-info-container hvr-float-shadow">
+              <div class="guest-image michael-pangilinan"></div>
+              <div class="guest-info">
+                <h6 class="guest-name">Michael Pangilinan</h6>
+                <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-        <div class="guest-info-container hvr-float-shadow">
-          <div class="guest-image liezel-garcia"></div>
-          <div class="guest-info">
-            <h6 class="guest-name">Liezel Garcia</h6>
-            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+            <div class="guest-info-container hvr-float-shadow">
+              <div class="guest-image liezel-garcia"></div>
+              <div class="guest-info">
+                <h6 class="guest-name">Liezel Garcia</h6>
+                <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-        <div class="guest-info-container hvr-float-shadow">
-          <div class="guest-image jason-dy"></div>
-          <div class="guest-info">
-            <h6 class="guest-name">Jason Dy</h6>
-            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+            <div class="guest-info-container hvr-float-shadow">
+              <div class="guest-image jason-dy"></div>
+              <div class="guest-info">
+                <h6 class="guest-name">Jason Dy</h6>
+                <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-        <div class="guest-info-container hvr-float-shadow">
-          <div class="guest-image erik-santos"></div>
-          <div class="guest-info">
-            <h6 class="guest-name">Erik Santos</h6>
-            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+            <div class="guest-info-container hvr-float-shadow">
+              <div class="guest-image erik-santos"></div>
+              <div class="guest-info">
+                <h6 class="guest-name">Erik Santos</h6>
+                <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-        <div class="guest-info-container hvr-float-shadow">
-          <div class="guest-image mayonnaise"></div>
-          <div class="guest-info">
-            <h6 class="guest-name">Mayonnaise</h6>
-            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+            <div class="guest-info-container hvr-float-shadow">
+              <div class="guest-image mayonnaise"></div>
+              <div class="guest-info">
+                <h6 class="guest-name">Mayonnaise</h6>
+                <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-        <div class="guest-info-container hvr-float-shadow">
-          <div class="guest-image udd"></div>
-          <div class="guest-info">
-            <h6 class="guest-name">UDD</h6>
-            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+            <div class="guest-info-container hvr-float-shadow">
+              <div class="guest-image udd"></div>
+              <div class="guest-info">
+                <h6 class="guest-name">UDD</h6>
+                <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-        <div class="guest-info-container hvr-float-shadow">
-          <div class="guest-image the-ransom-collective"></div>
-          <div class="guest-info">
-            <h6 class="guest-name">The Ransom Collective</h6>
-            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+            <div class="guest-info-container hvr-float-shadow">
+              <div class="guest-image the-ransom-collective"></div>
+              <div class="guest-info">
+                <h6 class="guest-name">The Ransom Collective</h6>
+                <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
