improvement(homepage, responsive-ui): home page half portion adjustments

--- a/index.html
+++ b/index.html
@@ -77,109 +77,109 @@
         </div>
       </div>
     </div>
-    <div class="row world-class-row">
-      <div class="col-12 col-md-4 col-lg-5 col-xl-6 heading-col">
-        <h1 class="okada-hero-heading text-center">
+    <div class="row world-class-row justify-content-center">
+      <div class="col-12 col-md-4 col-lg-5 col-xl-3 heading-col">
+        <h1 class="okada-hero-heading text-center text-md-left">
           WORLD CLASS ENTERTAINMENT
         </h1>
-        <p class="okada-hero-caption text-center">
+        <p class="okada-hero-caption text-center text-md-left">
           At Okada Manila, Entertainment is paramount to the complete guest experience.
         </p>
       </div>
-      <div class="col-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
+      <div class="col-12 col-md-8 col-lg-7 col-xl-7 image-col"></div>
     </div>
-    <div class="row the-company-row">
-      <div class="col-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
-      <div class="col-12 col-md-4 col-lg-5 col-xl-6 heading-col">
+    <div class="row the-company-row justify-content-center">
+      <div class="col-12 col-md-4 col-lg-5 col-xl-3 heading-col">
+        <img class="the-company-logo" src="images/the-company@2x.png" />
+        <br /><br />
         <p class="okada-hero-caption">
           The Company. Asia’s premiere vocal harmony act was formed in July, 1985 by alumni of the Ateneo College Glee
           Club. Initially, they sang as back up vocalists for the country's reigning pop stars of the '80's before
           turning professional as the headlining concert and recording artists that they are today.
         </p>
-
-        <img class="image the-company-group" src="images/the-company-group@2x.png" />
       </div>
+      <div class="col-12 col-md-8 col-lg-7 col-xl-7 image-col"></div>
     </div>
     <div id="guests" class="row guests-row justify-content-between justify-content-md-center align-content-around">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-8">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-11 m-lg-5">
         <div class="row">
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image bugoy-drilon"></div>
               <div class="guest-info">
-                <h6 class="guest-name">Bugoy Drilon</h6>
+                <strong class="guest-name">Bugoy Drilon</strong>
                 <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image daryl-ong"></div>
               <div class="guest-info">
-                <h6 class="guest-name">Daryl Ong</h6>
+                <strong class="guest-name">Daryl Ong</strong>
                 <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image michael-pangilinan"></div>
               <div class="guest-info">
-                <h6 class="guest-name">Michael Pangilinan</h6>
+                <strong class="guest-name">Michael Pangilinan</strong>
                 <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image liezel-garcia"></div>
               <div class="guest-info">
-                <h6 class="guest-name">Liezel Garcia</h6>
+                <strong class="guest-name">Liezel Garcia</strong>
                 <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image jason-dy"></div>
               <div class="guest-info">
-                <h6 class="guest-name">Jason Dy</h6>
+                <strong class="guest-name">Jason Dy</strong>
                 <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image erik-santos"></div>
               <div class="guest-info">
-                <h6 class="guest-name">Erik Santos</h6>
+                <strong class="guest-name">Erik Santos</strong>
                 <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image mayonnaise"></div>
               <div class="guest-info">
-                <h6 class="guest-name">Mayonnaise</h6>
+                <strong class="guest-name">Mayonnaise</strong>
                 <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image udd"></div>
               <div class="guest-info">
-                <h6 class="guest-name">UDD</h6>
+                <strong class="guest-name">UDD</strong>
                 <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image the-ransom-collective"></div>
               <div class="guest-info">
-                <h6 class="guest-name">The Ransom Collective</h6>
+                <strong class="guest-name">The Ransom Collective</strong>
                 <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
               </div>
             </div>
@@ -209,16 +209,16 @@
         <div id="theRestaurantsSlider" class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img class="swiper-image" src="images/the-restaurants-1.png" />
+              <img class="swiper-image" src="images/the-restaurants-1@2x.png" />
             </div>
             <div class="swiper-slide">
-              <img class="swiper-image" src="images/the-restaurants-1.png" />
+              <img class="swiper-image" src="images/the-restaurants-1@2x.png" />
             </div>
             <div class="swiper-slide">
-              <img class="swiper-image" src="images/the-restaurants-1.png" />
+              <img class="swiper-image" src="images/the-restaurants-1@2x.png" />
             </div>
             <div class="swiper-slide">
-              <img class="swiper-image" src="images/the-restaurants-1.png" />
+              <img class="swiper-image" src="images/the-restaurants-1@2x.png" />
             </div>
           </div>
           <!-- Add Pagination -->
