improvement(index, responsive-ui, cove-manila, the-restaurants, countdown): responsive UI for 80% pt

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="row countdown-row justify-content-center">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-5">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xs-8">
         <div id="countdown" class="countdown-container">
           <div class="number-of days wow fadeInDown animated" data-wow-delay="0.2s">00</div>
           <div class="number-of hours wow fadeInDown animated" data-wow-delay="0.4s">00</div>
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="row world-class-row justify-content-center">
-      <div class="col-12 col-md-4 col-lg-5 col-xl-3 heading-col">
+      <div class="col-12 col-md-4 col-lg-5 col-xl-4 heading-col">
         <h1 class="okada-hero-heading text-center text-md-left">
           WORLD CLASS ENTERTAINMENT
         </h1>
@@ -89,7 +89,7 @@
       <div class="col-12 col-md-8 col-lg-7 col-xl-7 image-col"></div>
     </div>
     <div class="row the-company-row justify-content-center">
-      <div class="col-12 col-md-4 col-lg-5 col-xl-3 heading-col">
+      <div class="col-12 col-md-4 col-lg-5 col-xl-4 heading-col">
         <img class="the-company-logo" src="images/the-company@2x.png" />
         <br /><br />
         <p class="okada-hero-caption">
@@ -101,9 +101,9 @@
       <div class="col-12 col-md-8 col-lg-7 col-xl-7 image-col"></div>
     </div>
     <div id="guests" class="row guests-row justify-content-between justify-content-md-center align-content-around">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-11 m-lg-5">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-11 m-xl-5">
         <div class="row">
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image bugoy-drilon"></div>
               <div class="guest-info">
@@ -112,7 +112,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image daryl-ong"></div>
               <div class="guest-info">
@@ -121,7 +121,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image michael-pangilinan"></div>
               <div class="guest-info">
@@ -130,7 +130,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image liezel-garcia"></div>
               <div class="guest-info">
@@ -139,7 +139,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image jason-dy"></div>
               <div class="guest-info">
@@ -148,7 +148,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image erik-santos"></div>
               <div class="guest-info">
@@ -157,7 +157,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image mayonnaise"></div>
               <div class="guest-info">
@@ -166,7 +166,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image udd"></div>
               <div class="guest-info">
@@ -175,7 +175,7 @@
               </div>
             </div>
           </div>
-          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+          <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-3 col-xl-4">
             <div class="guest-info-container hvr-float-shadow">
               <div class="guest-image the-ransom-collective"></div>
               <div class="guest-info">
@@ -250,8 +250,9 @@
     </div>
     <div class="row cove-manila-row-1">
       <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="row cove-manila-row-1-sub-1">
-          <div class="col-12 col-sm-12 col-md-12 col-lg-12 featured-dj-1 wow animated fadeInUp" data-wow-delay="0.5s">
+        <div class="row cove-manila-row-1-sub-1 justify-content-md-center">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-1 wow animated fadeInUp"
+            data-wow-delay="0.5s">
             <div class="row dj-solaii-wrapper">
               <div class="col-7 dj-solaii-head"></div>
               <div class="col-5 dj-solaii-details">
@@ -272,8 +273,8 @@
             </div>
           </div>
         </div>
-        <div class="row cove-manila-row-1-sub-2">
-          <div class="col-12 col-sm-12 col-md-12 col-lg-12 featured-dj-2 p-0">
+        <div class="row cove-manila-row-1-sub-2 justify-content-md-center">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0">
             <div class="dj-kaka grid-container">
               <div class="dj-kaka-head-wrapper wow animated fadeInLeft" data-wow-delay="0.9s">
                 <img class="dj-kaka-head" src="images/dj-kaka.png" />
