--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               <div class="col-7 dj-solaii-head"></div>
               <div class="col-5 dj-solaii-details">
                 <div class="dj-solaii-logo"></div>
-                <div class="dj-solaii-desc-wrapper p-1">
+                <div class="dj-solaii-desc-wrapper p-1 p-lg-2 p-xl-3">
                   <p class="dj-solaii-desc">
                     The genre of DJ Solaii is Techno-Electronic music, focused more on beats and rhythms than vocals or
                     melody.
@@ -273,13 +273,18 @@
             </div>
           </div>
         </div>
-        <div class="row cove-manila-row-1-sub-2 justify-content-md-center">
+
+      </div>
+    </div>
+    <div class="row cove-manila-row-2">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="row cove-manila-row-2-sub-1 justify-content-md-center">
           <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0">
             <div class="dj-kaka grid-container">
-              <div class="dj-kaka-head-wrapper wow animated fadeInLeft" data-wow-delay="0.9s">
-                <img class="dj-kaka-head" src="images/dj-kaka.png" />
+              <div class="dj-kaka-head-wrapper wow animated fadeInLeft" data-wow-delay="0.5s">
+                <div class="dj-kaka-head"></div>
               </div>
-              <div class="dj-kaka-details-wrapper wow animated fadeInRight" data-wow-delay="1.1s">
+              <div class="dj-kaka-details-wrapper wow animated fadeInRight" data-wow-delay="0.7s">
                 <div class="dj-kaka-details-container">
                   <div class="dj-kaka-details">
                     <h1 class="dj-kaka-name">
@@ -303,57 +308,22 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="row cove-manila-row-2">
-      <div class="col-6 col-sm-6 col-md-6 col-lg-6 featured-dj-below">
-        <div class="featured-dj-below-profile carlo-atendido wow animated fadeInDown" data-wow-delay="0.1s">
-          <div class="featured-dj-below-profile-image"></div>
-          <div class="featured-dj-below-profile-details">
-            <p class="featured-dj-name">Carlo Atendido</p>
-            <p class="featured-dj-name-desc">Resident Cove Manila DJ</p>
+        <div class="row cove-manila-row-2-sub-2 justify-content-md-center">
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-5 featured-dj-below">
+            <div class="featured-dj-below-profile carlo-atendido wow animated fadeInDown" data-wow-delay="0.1s">
+              <div class="featured-dj-below-profile-image"></div>
+              <div class="featured-dj-below-profile-details">
+                <p class="featured-dj-name">Carlo Atendido</p>
+                <p class="featured-dj-name-desc">Resident Cove Manila DJ</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="col-6 col-sm-6 col-md-6 col-lg-6 featured-dj-below">
-        <div class="featured-dj-below-profile everyday-people wow animated fadeInDown" data-wow-delay="0.2s">
-          <div class="featured-dj-below-profile-image"></div>
-          <div class="featured-dj-below-profile-details">
-            <p class="featured-dj-name">Everyday People</p>
-            <p class="featured-dj-name-desc">Cove Manila NYE DJs</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 pre-footer-wrapper">
-        <div class="row cove-manila-row-2-sub-1 pre-footer-row justify-content-center">
-          <div class="col-12 pre-footer-col text-center">
-            <p class="nye-gold-rush"><strong>NEW YEAR'S EVE GOLD RUSH</strong></p>
-            <p class="nye-gold-rush-sub">LET'S PAINT IT ALL GOLD.</p>
-
-            <div class="row justify-content-center">
-              <div class="col-12 text-center social-icons-wrapper">
-                <ul class="social-icons">
-                  <li class="social-icon hvr-grow">
-                    <a class="social-icon-link fb-icon" href="#">
-                      <i class="fa fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li class="social-icon hvr-grow">
-                    <a class="social-icon-link ig-icon" href="#">
-                      <i class="fa fa-instagram"></i>
-                    </a>
-                  </li>
-                  <li class="social-icon hvr-grow">
-                    <a class="social-icon-link in-icon" href="#">
-                      <i class="fa fa-linkedin"></i>
-                    </a>
-                  </li>
-                  <li class="social-icon hvr-grow">
-                    <a class="social-icon-link yt-icon" href="#">
-                      <i class="fa fa-youtube-play"></i>
-                    </a>
-                  </li>
-                </ul>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-5 featured-dj-below">
+            <div class="featured-dj-below-profile everyday-people wow animated fadeInDown" data-wow-delay="0.2s">
+              <div class="featured-dj-below-profile-image"></div>
+              <div class="featured-dj-below-profile-details">
+                <p class="featured-dj-name">Everyday People</p>
+                <p class="featured-dj-name-desc">Cove Manila NYE DJs</p>
               </div>
             </div>
           </div>
@@ -364,6 +334,44 @@
   </div>
   <footer class="footer-wrapper">
     <div class="container-fluid">
+      <div class="row cove-manila-row-3">
+        <div class="col-12 pre-footer-wrapper">
+          <div class="row cove-manila-row-2-sub-1 pre-footer-row justify-content-center">
+            <div class="col-10 pre-footer-col text-center">
+              <p class="nye-gold-rush wow animated zoomIn" data-wow-delay="0.1s"><strong>NEW YEAR'S EVE GOLD
+                  RUSH</strong></p>
+              <p class="nye-gold-rush-sub wow animated zoomIn" data-wow-delay="0.3s">LET'S PAINT IT ALL GOLD.</p>
+
+              <div class="row justify-content-center">
+                <div class="col-12 text-center social-icons-wrapper">
+                  <ul class="social-icons">
+                    <li class="social-icon hvr-grow wow animated fadeInUp" data-wow-delay="0.1s">
+                      <a class="social-icon-link fb-icon" href="#">
+                        <i class="fa fa-facebook"></i>
+                      </a>
+                    </li>
+                    <li class="social-icon hvr-grow wow animated fadeInUp" data-wow-delay="0.2s">
+                      <a class="social-icon-link ig-icon" href="#">
+                        <i class="fa fa-instagram"></i>
+                      </a>
+                    </li>
+                    <li class="social-icon hvr-grow wow animated fadeInUp" data-wow-delay="0.3s">
+                      <a class="social-icon-link in-icon" href="#">
+                        <i class="fa fa-linkedin"></i>
+                      </a>
+                    </li>
+                    <li class="social-icon hvr-grow wow animated fadeInUp" data-wow-delay="0.4s">
+                      <a class="social-icon-link yt-icon" href="#">
+                        <i class="fa fa-youtube-play"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row footer-row">
         <div class="col-12 text-center text-white">
           <p class="footer-text footer-address">
