refactor(the-restaurants, desktop, index): the restaurants adjustments for desktop view
BREAKING CHANGE: Might broke some elements for tablet to mobile view

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       </div>
     </div>
     <div id="theRestaurants" class="row the-restaurants-row">
-      <div class="col-12 col-md-4 col-lg-5 col-xl-5 p-0">
+      <div class="col-12 col-md-4 col-lg-7 col-xl-7 p-0">
         <!-- Swiper -->
         <div id="theRestaurantsSlider" class="swiper-container">
           <div class="swiper-wrapper">
@@ -225,19 +225,23 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-7 col-xl-7 the-restaurants-col">
-        <div class="the-restaurants-logo"></div>
-        <h1 class="the-restaurants-heading">
-          A feast of the finest holiday flavors
-        </h1>
-        <p class="okada-hero-caption text-left">
-          Spread the holiday cheer with family and friends only at Okada Manila's signature restaurants.
-          <br /><br />
-          November 4 — January 4
-        </p>
-        <button type="button" class="btn btn-dark btn-dazzling dazzling-text">
-          LEARN MORE
-        </button>
+      <div class="col-12 col-md-6 col-lg-5 col-xl-5 the-restaurants-col">
+        <div class="the-restaurants-content">
+          <div class="the-restaurants-logo"></div>
+          <h1 class="the-restaurants-heading">
+            A feast of<br />
+            the finest<br />
+            holiday flavors
+          </h1>
+          <p class="okada-hero-caption text-left">
+            Spread the holiday cheer with family and friends only at Okada Manila's signature restaurants.
+            <br /><br />
+            November 4 — January 4
+          </p>
+          <button type="button" class="btn btn-dark btn-dazzling dazzling-text">
+            LEARN MORE
+          </button>
+        </div>
       </div>
     </div>
     <div id="coveManila" class="row cove-manila-row text-center">
