improvement(index, wow, animation): removed delays on larger elements

--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
     <div class="row cove-manila-row-1">
       <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row cove-manila-row-1-sub-1 justify-content-md-center">
-          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-1 wow animated fadeInUp"
-            data-wow-delay="0.5s">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-1 wow animated fadeInUp">
             <div class="row dj-solaii-wrapper">
               <div class="col-7 dj-solaii-head"></div>
               <div class="col-5 dj-solaii-details">
@@ -268,7 +267,7 @@
                   </p>
                 </div>
                 <div class="dj-solaii-button-container">
-                  <a href="#" class="btn visit-channel-button wow animated fadeIn fast" data-wow-delay="0.3"
+                  <a href="#" class="btn visit-channel-button wow animated fadeIn fast" data-wow-delay="0.5"
                     target="_blank">
                     <h2 class="visit-channel-text">VISIT CHANNEL</h2>
                   </a>
@@ -285,10 +284,10 @@
         <div class="row cove-manila-row-2-sub-1 justify-content-md-center">
           <div class="col-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 featured-dj-2 p-0">
             <div class="dj-kaka grid-container">
-              <div class="dj-kaka-head-wrapper wow animated fadeInLeft" data-wow-delay="0.5s">
+              <div class="dj-kaka-head-wrapper wow animated fadeInLeft">
                 <div class="dj-kaka-head"></div>
               </div>
-              <div class="dj-kaka-details-wrapper wow animated fadeInRight" data-wow-delay="0.7s">
+              <div class="dj-kaka-details-wrapper wow animated fadeInRight" data-wow-delay="0.2s">
                 <div class="dj-kaka-details-container">
                   <div class="dj-kaka-details">
                     <h1 class="dj-kaka-name">
@@ -303,7 +302,7 @@
                   </div>
                 </div>
                 <div class="dj-kaka-button-container">
-                  <a href="#" class="btn visit-channel-button wow animated fadeIn fast" data-wow-delay="0.3"
+                  <a href="#" class="btn visit-channel-button wow animated fadeIn fast" data-wow-delay="0.4"
                     target="_blank">
                     <h2 class="visit-channel-text">VISIT CHANNEL</h2>
                   </a>
@@ -314,7 +313,7 @@
         </div>
         <div class="row cove-manila-row-2-sub-2 justify-content-md-center">
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-5 featured-dj-below">
-            <div class="featured-dj-below-profile carlo-atendido wow animated fadeInDown" data-wow-delay="0.1s">
+            <div class="featured-dj-below-profile carlo-atendido wow animated fadeInDown">
               <div class="featured-dj-below-profile-image"></div>
               <div class="featured-dj-below-profile-details">
                 <p class="featured-dj-name">Carlo Atendido</p>
