improvement(responsive, mobile, desktop): adjustments after styling cove manila for web

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no, user-scalable=no">
 
   <title>Okada Manila NYE 2019</title>
 
@@ -47,6 +48,21 @@
       </ul>
     </div>
   </nav>
+  <!-- <div class="modal fade modal-fullscreen-menu" id="modalNavigation" role='dialog' tabindex='-1'>
+    <button aria-label='Close' class='close' data-dismiss='modal' type='button'>
+      <span class='sr-only'>Close navigation</span>
+      <span class='glyphicon glyphicon-remove'></span>
+    </button>
+    <div class='modal-dialog'>
+      <nav class='list-group'>
+        <a class='list-group-item' href='#'>Home</a>
+        <a class='list-group-item' href='#'>Services</a>
+        <a class='list-group-item' href='#'>Meet the Team</a>
+        <a class='list-group-item' href='#'>Careers</a>
+        <a class='list-group-item' href='#'>Contact Us</a>
+      </nav>
+    </div>
+  </div> -->
   <div id="top" class="container-fluid main-container">
     <div class="row hero-row justify-content-lg-center">
       <div class="col-12 col-sm-12 col-md-12 col-lg-10 p-0">
@@ -340,7 +356,7 @@
       <div class="row cove-manila-row-3">
         <div class="col-12 pre-footer-wrapper">
           <div class="row cove-manila-row-2-sub-1 pre-footer-row justify-content-center">
-            <div class="col-10 pre-footer-col text-center">
+            <div class="col-12 col-md-10 col-lg-10 col-lg-10 pre-footer-col text-center">
               <p class="nye-gold-rush wow animated zoomIn" data-wow-delay="0.1s"><strong>NEW YEAR'S EVE GOLD
                   RUSH</strong></p>
               <p class="nye-gold-rush-sub wow animated zoomIn" data-wow-delay="0.3s">LET'S PAINT IT ALL GOLD.</p>
